fix bud disappearing on mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -84,3 +84,20 @@ article img {
 article img:hover {
   filter: drop-shadow(0 0 2rem rgba(255,75,50,0.7));
 }
+
+@media only screen and (max-width: 1000px) {
+  article blockquote {
+    padding-top: 2em;
+  }
+  blockquote::before {
+    content: "(~￣³￣)~";
+    display: block;
+    font-weight: 500;
+    font-size: 2em;
+    top: -0.95em;
+    right: -0.1em;
+    position: relative;
+    height: 0;
+    color: #f55;
+  }
+}
